# webhook-sender

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: actionlint.yml  ci.yml  review.yml
src/: conn.rs  conn_initializer.rs  discord.rs  limiter.rs  main.rs  request.rs  web.rs
