[package]
name = "webhook-sender"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-channel = "2.3.1"
axum = { version = "0.8.3", features = ["macros"] }
axum-extra = { version = "0.12.0", features = ["typed-header"] }
bytes = "1.10.1"
clap = { version = "4.5.37", features = ["derive", "env"] }
h2 = "0.4.9"
headers = "0.4.0"
hickory-resolver = { version = "0.25.1", features = ["tokio"] }
http = "1.3.1"
once_cell = "1.21.3"
papaya = "0.2.1"
rand = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["net", "rt-multi-thread", "sync", "time"] }
tokio-rustls = "0.26.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
url = { version = "2.5.4", features = ["serde"] }
webpki-roots = "1.0.0"

justnames = { git = "https://github.com/EEWBot/justnames", tag = "v0.1.0" }
